--- a/src/components/Feed.css
+++ b/src/components/Feed.css
@@ -16,7 +16,7 @@
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 450px) {
   .feed {
     padding: 0;
     align-items: flex-start;
