--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -64,7 +64,7 @@
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 450px) {
   .post {
     width: 100vw;
   }
