--- a/src/components/Story.css
+++ b/src/components/Story.css
@@ -28,7 +28,7 @@
   left: 20%;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 450px) {
   .story {
     position: relative;
     background-position: center center;
