--- a/src/components/StoryReel.css
+++ b/src/components/StoryReel.css
@@ -8,7 +8,7 @@
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 450px) {
   .storyReel {
     overflow-x: scroll;
     padding-top: 1em;
